# algorithms

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE  README.md  tAnagram.cpp  tBalancedBrackets.cpp  tDecompressString.cpp  tMinNumCoins.cpp  tPermutation.cpp  tReverseString.cpp  tRotateImage.cpp  tTowerOfHanoi.cpp  tUniqueCharacters.cpp  tWildcardMatching.cpp  tasks.org  tree_height.cpp
algorithm-jeff-erikson/: CMakeLists.txt  readme.md
algorithm-jeff-erikson/cmake/: catch2.cmake  fmt.cmake
algorithm-jeff-erikson/src/: 01-tower-of-hanoi.cpp  CMakeLists.txt
athenahealth/: CMakeLists.txt  tExample.cpp  tTemplate.cpp
cci/: 1.1.cpp  1.2.cpp  1.3.cpp  1.4.cpp  1.5.cpp  1.6.cpp  1.7.cpp  1.9.cpp  17_8.cpp  3.2.cpp  4.2.cpp  4.4.cpp  CMakeLists.txt  string.hpp  string_distance.cpp
cmake/: catch2.cmake  glaze.cmake
docs/: system.design.interview.md
experiments/: UniqueCharacters.hpp  coins.cpp  pUniqueCharacters.cpp  prob_7_14.cpp  tBalancedBrackets.cpp  tDecompressString.cpp  tFibonaci_matrix.cpp  tMergeSort.cpp  tRemoveDuplicatedCharacters.cpp  tRotateImage.cpp  tStockProfit.cpp  tSum.cpp  tUniqueCharacters.cpp  tpriorioty_queue.cpp
experiments/athenahealth/: tExample.cpp
notes/: top.questions.org
questions/: fb.org  references.org
questions/solutions/: 4_1.cpp  CMakeLists.txt  bfs.cpp  bfs.hpp  dag_loop.cpp  data.hpp  detect_cycle.hpp  dfs.cpp  dfs.hpp  graph.hpp  max_sum.cpp  sorted_list.cpp  topological_sorting.hpp  utils.hpp
questions/solutions/notes/: todo.org
questions/solutions/src/: data_structures.hpp  dfs.hpp  graph.hpp  topological_sorting.hpp  traversal_policies.hpp  utils.hpp
questions/solutions/unittests/: 4_1.cpp  CMakeLists.txt  bfs.cpp  dag_loop.cpp  data.hpp  data_structures.cpp  dfs.cpp  max_sum.cpp  sorted_list.cpp
scripts/: format_cmake_files.sh  format_cpp_files.sh  run_clang_tidy.sh
src/: 3sum.cpp  bfs.hpp  binary-tree.cpp  data_structures.hpp  decode-string.cpp  dfs.hpp  fibonaci.cpp  graph.hpp  helpers.h  log_parser.cpp  longest-increasing-subsequence.cpp  longest-substring-without-repeating-characters.cpp  merge-intervals.cpp  merge-sort.cpp  minimum-insertion-steps-to-make-a-string-palindrome.cpp  sparse.hpp  subarrays-with-k-different-integers.cpp  subset-sum.cpp  text-segmentation.cpp  topological_sorting.hpp  tower-of-hanoi.cpp  utils.hpp  wildcat-matching.cpp  zigzag-conversion.cpp
unittests/: dag_loop.cpp  data.hpp  dfs.cpp  graph.cpp  sorted_list.cpp
